Updating folder structure and making into a package. Adding first few tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 #Ignored directories
-metaheuristics_env/*
+__pycache__/
+metaheuristics_env/
+bin/
+build/
+dist/
 
 #Ignored files
 *.DS_Store
+*.egg-info/
